--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,42 +45,29 @@
 body, html {
   height: 100%;
 }
+
+/* Background image */
 .backgroundfirst {
-  /* The image used */
-  background-image: url('/assets/images/landing_background.jpg');
-
-  /* Full height */
-  height: 70vh;
-  width:70vw;
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  
+	overflow-x: hidden;
+	overflow-y: auto;
+	font-family: 'Manjari', sans-serif;
+	margin: 0;
+	height: 100%;
+	background-image: url(../assets/images/landing_background.jpg);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-color:#E7D7CD;
 }
-
-/*second attempt a diffrent way - header background image*/
-
-.header {
-  background-image: url('/assets/images/landing_background.jpg');
-  background-size: cover;
-  background-position: center;
-  position: relative;
-  height: 70vh;
-  width:70vw;
-}
-
-.overlay {
-  position: absolute;
-  min-height: 100%;
-  min-width: 100%;
-  left: 0;
-  top: 0;
-  background: rgba(0, 0, 0, 0.6);
+img {
+	max-width: 100%;
+	height: auto;
 }
 
 
-.title and bodytext*/
+
+.title and bodytext
 
 .description {
   left: 50%;
