--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,7 @@ body, html {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-color:#E7D7CD;
+	/*background-color:#E7D7CD;8/
 }
 img {
 	max-width: 100%;
