--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,11 +77,11 @@ img {
   text-align: center;
 }
 .description h1 {
-  color: #6ab446;
+  color: #30ACB4;
   text-align: center;
 }
 .description p {
-  color: #6ab446;
+  color: #30ACB4;
   font-size: 1.3rem;
   line-height: 1.5;
   text-align: center;
