--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,11 +54,11 @@ body, html {
 	font-family: 'Manjari', sans-serif;
 	margin: 0;
 	height: 100%;
-	background-image: url(../assets/images/landing_background.jpg);
+	background-image: url("/assets/images/landing_background.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	
+	background-color:#E7D7CD;
 }
 img {
 	max-width: 100%;
