--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ body, html {
 	font-family: 'Manjari', sans-serif;
 	margin: 0;
 	height: 100%;
-	background-image: url("/assets/images/landing_background.jpg");
+	background-image:url("../images/landing_background.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
