contact us section added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,7 @@ img {
   top: 45%;
   transform: translate(-50%, -55%);
   text-align: center;
+  opacity: 0.5;
 }
 .description h1 {
   color: #30ACB4;
