css added for writing over first image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,14 @@ img {
 	height: auto;
 }
 
+/* Centered text opening image */
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
 
 
 .title and bodytext
