--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 .title {
     color: white;
 }
-/*----navbar end-------*/
+/*----navbar start-------*/
 .navbar-brand {
     color: #FFBD33;
 }
@@ -14,8 +14,9 @@
 .navbar {
     background: #FFBD33 ; 
     border-color: white; 
-    letter-spacing: 7px;
+    letter-spacing: 0px;
     text-transform: uppercase;
+    text-align: center;  
 }
 
 .navbar .navbar-collapse {
@@ -40,14 +41,35 @@
     float: left;
     text-transform: uppercase;
 }
+
+/* code below from https://www.w3schools.com/howto/howto_css_topnav_centered.asp */
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+/* Centered section inside the top navigation */
+.topnav-centered a {
+  float: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 /*navbar end*/
 
 /*section*/
 
-#about-us {
-   background-image:url("../images/welshflag.jpg");
-   
-}
+
 
 
 #Our-Promise {
@@ -134,6 +156,14 @@ img {
     background-repeat: no-repeat;
 	font-family: 'Manjari', sans-serif;
 	position: relative;
+}
+
+.right-center {
+    float: right;
+}
+
+.left-center {
+    float: left;
 }
 
 .contact-us-css {
@@ -238,4 +268,10 @@ padding-right: 1.1rem;
 }
 /*gallery end*/
 
+/*--- get quote -- */
+
+.form-colour {
+    box-sizing: border-box;
+    color: white;
+}
 
